[tool.poetry]
name = "pytorch-course"
version = "0.1.0"
description = ""
authors = ["Destin Peterson <destin.peterson@swyfft.com>"]
readme = "README.md"
packages = [{include = "pytorch_course"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
graphviz = "^0.20.1"
torchviz = "^0.0.2"
tensorboard = "^2.14.1"
matplotlib = "^3.8.0"
sklearn = "^0.0.post10"
jupyter = "^1.0.0"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
